<resources>
    <string name="app_name">Flip to Shhh</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Main Menu -->
    <string name="flip_to_shhh_status">Flip to Shhh Status</string>
    <string name="status_indicator_off">Stopped</string>
    <string name="status_indicator_on">Active</string>
    <string name="flip_to_mode">Flip-to Mode</string>
    <string name="mode_indicator_silent">Silent</string>
    <string name="mode_indicator_vibrate">Vibrate</string>
</resources>